# frozen-automata

./: .gitignore  frozen-automata.spec  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yaml  release.yaml
resources/default/: config.json
resources/packs/default/: pack.json
src/: app.py  main.py  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  tray.rs
src/activities/: __init__.py  configuration.py  gif.py  image.py  panic.py  prompt.py  wallpaper.py  web.py
src/config/: __init__.py
src/core/: __init__.py  paths.py
src/core/config/: __init__.py  app.py
src/hibernate/: __init__.py  default.py  original.py
src/pack/: pack.py
src/window/: __init__.py  popup.py  prompt.py  startup.py
windows/: popup.html
